# pyprideap

./: .gitignore  README.md  environment.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
configs/: Reveal-Fixed-LOD.csv
docs/: getting-started.md  olink-guide.md  somascan-guide.md
scripts/: export_qc_plots_svg.py
src/pyap/: __init__.py  core.py  pride.py  stats.py
src/pyap/readers/: __init__.py  olink_csv.py  olink_xlsx.py  somascan_adat.py
src/pyap/validators/: __init__.py  base.py  olink_explore.py  olink_target.py  somascan.py
src/pyprideap/: __init__.py  __main__.py  cli.py  core.py  filtering.py  lod.py
src/pyprideap/api/: __init__.py  pride.py
src/pyprideap/configs/: Explore-3072-Fixed-LOD-2024-12-19.csv
src/pyprideap/io/: __init__.py
src/pyprideap/io/readers/: __init__.py  olink_csv.py  olink_parquet.py  olink_xlsx.py  registry.py  sdrf.py  somascan_adat.py  somascan_csv.py
src/pyprideap/io/validators/: __init__.py  base.py  olink_explore.py  olink_target.py  somascan.py
src/pyprideap/processing/: __init__.py  filtering.py  lod.py  normalization.py
src/pyprideap/processing/olink/: __init__.py  outliers.py  pipeline.py  uniprot.py
src/pyprideap/processing/somascan/: __init__.py  controls.py  outliers.py  pipeline.py  qc_flags.py
src/pyprideap/qc/: __init__.py  _compute_extra.py  compute.py  report.py
src/pyprideap/readers/: olink_csv.py
src/pyprideap/stats/: __init__.py  descriptive.py  design.py  differential.py
src/pyprideap/validators/: olink_explore.py
src/pyprideap/viz/: __init__.py  plots.py  theme.py
src/pyprideap/viz/qc/: __init__.py  compute.py  render.py  report.py
tests/: conftest.py  create_fixtures.py  test_analysis.py  test_api.py  test_core.py  test_differential.py  test_experimental_design.py  test_filtering.py  test_integration.py  test_io.py  test_lod.py  test_normalization.py  test_pride.py  test_processing.py  test_qc_compute.py  test_qc_compute_extra.py  test_qc_pipeline.py  test_qc_render.py  test_qc_report.py  test_readers.py  test_registry.py  test_sdrf.py  test_stats.py  test_validators.py
tests/data/: olink_sample.npx.csv  olink_sample.parquet  olink_sample.xlsx  somascan_sample.adat  somascan_sample.csv  test_sample.sdrf.tsv
