[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyprideap"
version = "0.1.0"
description = "Python library for PRIDE Affinity Proteomics (PAD) archive data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "PRIDE Team", email = "pride-support@ebi.ac.uk" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.urls]
Homepage = "https://github.com/PRIDE-Archive/pyprideap"
Repository = "https://github.com/PRIDE-Archive/pyprideap"
Issues = "https://github.com/PRIDE-Archive/pyprideap/issues"

[project.scripts]
pyprideap = "pyprideap.cli:main"

[project.optional-dependencies]
plots = ["plotly>=5.0"]
all = ["plotly>=5.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "types-requests>=2.31",
    "plotly>=5.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/test_differential.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
